--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@zip.js/zip.js": "^2.4.9",
     "core-js": "^3.6.5",
     "jszip": "^3.9.0",
+    "split.js": "^1.6.5",
     "vue": "^2.6.11"
   },
   "devDependencies": {
